# mtkernel_3

./: CMakeLists.txt  arm-none-eabi-gcc.cmake
etc/linker/iote_m367/: tkernel_map.ld
